force-app/main/default/objects/QRtoLeadMapping__mdt/QRtoLeadMapping__mdt.object-meta.xml
<CustomObject>
    <description>This object stores the mappings of vCard property names to Lead field names.</description>
    <label>QR-to-Lead Mapping</label>
    <pluralLabel>QR-to-Lead Mappings</pluralLabel>
</CustomObject>