force-app/main/default/objects/QRtoLeadMapping__mdt/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <description>This value is used when creating the Lead record if the specified vCard property isn&apos;t found in the QR code.</description>
    <inlineHelpText>This value is used when creating the Lead record if the specified vCard property isn&apos;t found in the QR code.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>