force-app/main/default/objects/QRtoLeadMapping__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this mapping is enabled and will be used during QR code processing.</description>
    <inlineHelpText>Indicates whether this mapping is enabled and will be used during QR code processing.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>