force-app/main/default/objects/QRtoLeadMapping__mdt/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this mapping is required in order for the QR code&apos;s scan to be considered valid for further processing.</description>
    <inlineHelpText>Indicates whether this mapping is required in order for the QR code&apos;s scan to be considered valid for further processing.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>