force-app/main/default/objects/QRtoLeadMapping__mdt/fields/LeadFieldName__c.field-meta.xml
<CustomField>
    <fullName>LeadFieldName__c</fullName>
    <description>The name of the Lead field that will receive specific vCard data.</description>
    <inlineHelpText>The name of the Lead field that will receive specific vCard data.</inlineHelpText>
    <label>Lead Field Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>