force-app/main/default/objects/QRtoLeadMapping__mdt/fields/vCardPropertyName__c.field-meta.xml
<CustomField>
    <fullName>vCardPropertyName__c</fullName>
    <description>The name of the vCard property that is used to capture specific vCard data.</description>
    <inlineHelpText>The name of the vCard property that is used to capture specific vCard data.</inlineHelpText>
    <label>vCard Property Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>